fix: gap between contents

--- a/frontend/src/layouts/ContentLayout/ContentLayout.module.css
+++ b/frontend/src/layouts/ContentLayout/ContentLayout.module.css
@@ -6,3 +6,8 @@
 .main {
     font-size: 18px;
 }
+
+.main * {
+    margin: .25em 0;
+}
+
