--- a/frontend/src/layouts/ContentLayout/codeContainer.css
+++ b/frontend/src/layouts/ContentLayout/codeContainer.css
@@ -6,6 +6,7 @@
     display: flex;
     justify-content: space-between;
     align-items: center;
+    margin: 0;
 }
 
 .copy-code {
@@ -25,4 +26,8 @@
 
 code {
     border-radius: 0 0 10px 10px;
+}
+
+pre, code, .copy-code-container {
+    margin: 0 !important;
 }
